[update] git config

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	email = 20001208taiki@gmail.com
+	email = taiki.kawagishi.private@gmail.com
 	name = taiki1280
 [init]
 	defaultBranch = main
