--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,18 +1,19 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
-    "name": "Ubuntu",
+    "name": "taiki_dotfiles_ubuntu",
     // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
     "image": "mcr.microsoft.com/devcontainers/base:jammy",
     // Features to add to the dev container. More info: https://containers.dev/features.
     // "features": {},
     "workspaceMount": "source=${localWorkspaceFolder},target=/home/vscode/git/dotfiles,type=bind,consistency=cached",
+    // ワークスペースはここにしているが、各種どっとファイルの設定を適用しているのは github のものなので修正しても git push するまで適用されない。とても注意。
     "workspaceFolder": "/home/vscode/git/dotfiles",
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
     // "forwardPorts": [],
     // Use 'postCreateCommand' to run commands after the container is created.
-    // 本プロジェクトは dotfiles なので、作成時にコマンド実行を行う
-    "postCreateCommand": "zsh /home/vscode/git/dotfiles/setup.sh",
+    // 本プロジェクトは dotfiles なので裏で devcontainer 内で github からリポジトリをクローンせずとも、作成時にコマンド実行を行っても良い。
+    // "postCreateCommand": "zsh /home/vscode/git/dotfiles/install.sh",
     // Configure tool-specific properties.
     "customizations": {
         "vscode": {
@@ -22,11 +23,6 @@
                 "mhutchie.git-graph"
             ],
             "settings": {
-                // 別のプロジェクトで dotfiles を使用する際は postCreateCommand は不要。
-                // 以下の様にリポジトリーから取得して dotfiles を使用
-                // "dotfiles.repository": "https://github.com/taiki1280/dotfiles.git",
-                // "dotfiles.targetPath": "~/git/dotfiles/",
-                // "dotfiles.installCommand": "setup.sh",
                 "workbench.colorCustomizations": {
                     "titleBar.inactiveBackground": "#123C63",
                     "titleBar.activeBackground": "#123C63",
