[update] yaml の width を修正

--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -13,3 +13,6 @@ overrides:
       trailingComma: none
       arrowParens: avoid
       proseWrap: never
+  - files: '*.yaml'
+    options:
+      tabWidth: 2
