[add] 包括的なドキュメント整備とセットアップ改善
- プラットフォーム別セットアップガイドを追加
- Git マルチアカウント設定の詳細ドキュメントを追加
- よくある問題のトラブルシューティングガイドを追加
- コントリビューションガイドラインとコミット規約を追加
- README を構造化して例文を充実化
- インストールスクリプトのエラーハンドリングとログ出力を改善
- .gitignore にセキュリティとプラットフォーム対応の除外設定を追加

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,42 @@
+# 個人設定ファイル
 .zsh_profile
+
+# macOS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# ログファイル
+*.log
+dotfiles-*.log
+
+# バックアップファイル
+*.bak
+*.backup
+*~
+
+# SSH キー（セキュリティ）
+*.pem
+*.key
+id_*
+!*.pub
+
+# 一時ファイル
+.tmp/
+*.tmp
+*.swp
+*.swo
+
+# IDE/エディタ
+.vscode/settings.json
+.idea/
+*.sublime-*
+
+# テスト用ファイル
+test/
+tests/
+*.test
